# Oxidized-Skies

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: Actions.yml  CI.yml  main.yml  oxidized-skies.yml
pkg/: oxidized_skies.js  oxidized_skies.wasm  oxidized_skies_bg.wasm
src/: index.html  lib.rs
