[package]
authors = ["Fereydoun Memarzanjany <F_Memarzanjany@outlook.com>"]
name = "oxidized-skies"
version = "0.1.0"
description = "Experimental Space Game With Sandbox Elements And a Procedurally Generated Universe Written In Rust WebAssembly And WebGPU With Multithreading Support Using The Most Cutting-edge Web Technologies."
homepage = "https://VioletVillain.github.io/Oxidized-Skies/"
repository = "https://github.com/VioletVillain/Oxidized-Skies"
documentation = "https://github.com/VioletVillain/Oxidized-Skies/wiki"
license = "GPL-3.0"
readme = "README.md"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.33"
wasm-bindgen = "0.2.58"

[dependencies.web-sys]
version = "0.3.33"
features = [
  "Document",
  "Element",
  "Window",
  "HtmlElement",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGl2RenderingContext",
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
rpath = false