[package]
name = "oxidized-skies"
version = "0.0.0"
description = "Space Game With Sandbox Elements And a Procedurally Generated Universe Made With RASM."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Fereydoun Memarzanjany <F_Memarzanjany@outlook.com>"]
homepage = "https://VioletVillain.github.io/Oxidized-Skies/"
repository = "https://github.com/VioletVillain/Oxidized-Skies"
documentation = "https://github.com/VioletVillain/Oxidized-Skies/wiki"
edition = "2018"
publish = false
#keywords = ["", "", "", "", ""]
#categories = ["multimedia", "", "", "", ""]

[lib]
crate-type = ["cdylib"]

[dependencies]
rasm = { path = "../RASM" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
rpath = false